syntax = "proto3";

option csharp_namespace = "GrpcServices";

import "google/protobuf/timestamp.proto";

package GrpcServices;

// The greeting service definition.
service FileSystem {
  // Sends a greeting
  rpc List (ListRequest) returns (ListReply);
}

message FileSystemObject{
  string name = 1;
  string full_name  = 2;
  string type = 3;
  int64 length  = 4;
  google.protobuf.Timestamp creation_time  = 5;
  google.protobuf.Timestamp last_write_time  = 6;
}

// The request message containing the user's name.
message ListRequest {
  string path = 1;
  string searchPattern = 2;
  bool includeSubDirectories = 3;
}

// The response message containing the greetings.
message ListReply {
  int32 code = 1;
  string msg = 2;
  repeated FileSystemObject items = 3;
}
